[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prefabs/GUI/Sign/MenuSign.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GUI/MenuSign.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/GUI/Sign/CharacterSelect.tscn" type="PackedScene" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[node name="Signs" type="Node2D"]
material = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="MenuSign" parent="." instance=ExtResource( 1 )]

[node name="CharacterSelect" parent="." instance=ExtResource( 3 )]

[connection signal="press_exit" from="MenuSign" to="." method="_on_MenuSign_press_exit"]
[connection signal="press_options" from="MenuSign" to="." method="_on_MenuSign_press_options"]
[connection signal="press_play" from="MenuSign" to="." method="_on_MenuSign_press_play"]
[connection signal="go_back" from="CharacterSelect" to="." method="_on_go_back"]
